--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,8 @@
       {{ serviceName }}
     </h1>
 
+<P><a href="base/index">Base pages</a></p>
+
     {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
   </div>
 </div>
