--- a/app/views/base/account/_BASE.html
+++ b/app/views/base/account/_BASE.html
@@ -1,4 +1,4 @@
-{% set serviceName = "Author licence account" %}
+{% set serviceName = "Study help account" %}
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
@@ -21,7 +21,7 @@
       text: "Settings"
     },
     {
-      href: "#",
+      href: "/" + folder + "/start",
       text: "Sign out"
     }
   ]
