--- a/app/views/base/account/index.html
+++ b/app/views/base/account/index.html
@@ -6,8 +6,8 @@
 
 {% set html %}
   <p class="govuk-notification-banner__heading">
-    You have 7 days left to send your application.
-    <a class="govuk-notification-banner__link" href="#">View application</a>.
+    You have tasks to complete.
+    <a class="govuk-notification-banner__link" href="tasks">Go to incomplete tasks</a>.
   </p>
 {% endset %}
 
@@ -18,9 +18,9 @@
 
 
     Panel
-    Important – if you don’t upload your evidence of your writing your application won’t be processed.
+    Important – if you don’t upload your evidence your application won’t be processed.
 
-    Upload writing style document – file upload.
+    Upload document – file upload.
 
     Change the type of licence you have.
 
