--- a/app/views/base/apply/check-your-answers.html
+++ b/app/views/base/apply/check-your-answers.html
@@ -1,29 +1,47 @@
 {% set pageTitle = "Check your answers before sending your application" %}
 {% set hideBack = true %}
+{% set hideForm = true %} <!-- want custom approach to form -->
 {% extends "/"  + folder +  "/" + subfolder + "/_BASE.html" %}
 
 {% block form %}
 
 {{pageTitle | headingH1 | safe }}
 
-<h2 class="govuk-heading-m">Personal details</h2>
+<h2 class="govuk-heading-m">Your details</h2>
 
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
   rows: [
     {
       key: {
-        text: "Name"
+        text: "Full name"
       },
       value: {
-        text: "Sarah Philips"
+        text:  data['full-name'] or "Full Name"
       },
       actions: {
         items: [
           {
-            href: "#",
+            href: "1",
             text: "Change",
             visuallyHiddenText: "name"
+          }
+        ]
+      }
+    },
+    {
+      key: {
+        text: "Email address"
+      },
+      value: {
+        text:  data['email-address'] or "email@example.com"
+      },
+      actions: {
+        items: [
+          {
+            href: "1",
+            text: "Change",
+            visuallyHiddenText: "email"
           }
         ]
       }
@@ -33,12 +51,12 @@
         text: "Date of birth"
       },
       value: {
-        text: "5 January 1978"
+        text: (data["date-of-birth-day"] or "1") + " " +  (data["date-of-birth-month"] or "12") | monthToWords  + " "  + (data['date-of-birth-year'] or "1975")
       },
       actions: {
         items: [
           {
-            href: "#",
+            href: "1",
             text: "Change",
             visuallyHiddenText: "date of birth"
           }
@@ -47,51 +65,51 @@
     },
     {
       key: {
-        text: "Customer reference"
+        text: "Types of help you need"
       },
       value: {
-        text: "Not provided"
+        html: (data['types'] | join('<br>')) if data['types'] else  "Example type"
       },
       actions: {
         items: [
           {
-            href: "#",
+            href: "2",
             text: "Change",
-            visuallyHiddenText: "customer reference"
+            visuallyHiddenText: "types of help you need"
           }
         ]
       }
     },
     {
       key: {
-        text: "Address"
+        text: "Detail"
       },
       value: {
-        html: "72 Guild Street<br>London<br>SE23 6FH"
+        text: data['moreDetail'] or "Example of a lot of text that will be related to what is needed"
       },
       actions: {
         items: [
           {
             href: "#",
             text: "Change",
-            visuallyHiddenText: "address"
+            visuallyHiddenText: "details"
           }
         ]
       }
     },
     {
       key: {
-        text: "Contact details"
+        text: "Uploads"
       },
       value: {
-        html: '<p class="govuk-body">07700 900457</p><p class="govuk-body">sarah.phillips@example.com</p>'
+        html: data["fileUpload1"] or "Not provided"
       },
       actions: {
         items: [
           {
-            href: "#",
+            href: "5",
             text: "Change",
-            visuallyHiddenText: "contact details"
+            visuallyHiddenText: "upload"
           }
         ]
       }
@@ -99,81 +117,6 @@
   ]
 }) }}
 
-<h2 class="govuk-heading-m">Application details</h2>
-
-{{ govukSummaryList({
-  classes: "govuk-!-margin-bottom-9",
-  rows: [
-    {
-      key: {
-        text: "Previous application number"
-      },
-      value: {
-        text: "502135326"
-      },
-      actions: {
-        items: [
-          {
-            href: "#",
-            text: "Change",
-            visuallyHiddenText: "previous application number"
-          }
-        ]
-      }
-    },
-    {
-      key: {
-        text: "Licence type"
-      },
-      value: {
-        text: "For personal use"
-      },
-      actions: {
-        items: [
-          {
-            href: "#",
-            text: "Change",
-            visuallyHiddenText: "licence type"
-          }
-        ]
-      }
-    },
-    {
-      key: {
-        text: "Home address"
-      },
-      value: {
-        html: "72 Guild Street<br>London<br>SE23 6FH"
-      },
-      actions: {
-        items: [
-          {
-            href: "#",
-            text: "Change",
-            visuallyHiddenText: "home address"
-          }
-        ]
-      }
-    },
-    {
-      key: {
-        text: "Licence period"
-      },
-      value: {
-        text: "Valid for 6 months"
-      },
-      actions: {
-        items: [
-          {
-            href: "#",
-            text: "Change",
-            visuallyHiddenText: "licence period"
-          }
-        ]
-      }
-    }
-  ]
-}) }}
 
 <h2 class="govuk-heading-m">Now send your application</h2>
 
