fixed broken link

--- a/app/views/base/index.html
+++ b/app/views/base/index.html
@@ -20,7 +20,7 @@
 
 {% set guidance = [
 {title: "Start page", description: "Guidance, start page, important text", link: "start" },
-{title: "Guidance", description: "Accordion", link: "guidance" }
+{title: "Guidance", description: "Accordion", link: "accordion" }
 
   ]%}
 
