added error messages

--- a/app/views/base/apply/1.html
+++ b/app/views/base/apply/1.html
@@ -1,10 +1,41 @@
 {% set pageTitle = "Your details" %}
-{% set nextPage = "2" %}
+{% set nextPage = "1-router" %}
 {% extends "/"  + folder +  "/" + subfolder + "/_BASE.html" %}
 
 {% block form %}
 
+{% if data['errors'] and  not (data['fullName'] and data['email'] and data['date-of-birth-day'] and data['date-of-birth-month'] and data['date-of-birth-year']) %}
 
+<div class="govuk-error-summary" data-module="govuk-error-summary">
+  <div role="alert">
+    <h2 class="govuk-error-summary__title">
+      There is a problem
+    </h2>
+    <div class="govuk-error-summary__body">
+      <ul class="govuk-list govuk-error-summary__list">
+        {% if not data['fullName'] %}<li>
+        <a href="#full-name">Enter your full name</a>
+        </li>
+        {% endif %}
+
+        {% if (not data['email'])%}
+
+        <li>
+          <a href="#email">Enter email address</a>
+        </li>
+        {% endif %}
+
+{% if ((not data['date-of-birth-day']) or (not data['date-of-birth-month']) or (not data['date-of-birth-year']))%}
+        <li>
+          <a href="#date-of-birth">Enter date of birth</a>
+        </li>
+      {% endif %}
+      </ul>
+    </div>
+  </div>
+</div>
+
+{% endif %}
 
 {{ pageTitle | headingH1 | safe  }}
 
@@ -15,7 +46,10 @@
     },
     id: "full-name",
     name: "fullName",
-    value: data['fullName']
+    value: data['fullName'],
+    errorMessage: {
+    text: "Enter full name"
+  } if (data['errors'] and not data['fullName'])
   }) }}
 
 
@@ -25,23 +59,45 @@
     },
     id: "email-address",
     name: "email",
-    value: data['email']
+    value: data['email'],
+    errorMessage: {
+    text: "Enter email address"
+  } if (data['errors'] and not data['email'])
   }) }}
 
 
   {{ govukDateInput({
-    id: "date-of-birth",
-    namePrefix: "date-of-birth",
-    values: data["date-of-birth"],
-    fieldset: {
-      legend: {
-        text: "Date of birth"
-      }
-    },
-    hint: {
-      text: "For example, 27 3 2007"
+  fieldset: {
+    legend: {
+      text: "Date of birth"
     }
-  }) }}
+  },
+  hint: {
+    text: "For example, 27 3 2007"
+  },
+  errorMessage: {
+    text: "Enter date of birth"
+  } if (data['errors'] and not (data['date-of-birth-day'] and data['date-of-birth-month'] and data['date-of-birth-year'])) ,
+  id: "date-of-birth",
+  namePrefix: "date-of-birth",
+  items: [
+    {
+      classes: "govuk-input--width-2 govuk-input--error" if (data['errors'] and not (data['date-of-birth-day'] and data['date-of-birth-month'] and data['date-of-birth-year'])) else "govuk-input--width-2",
+      name: "day",
+      value: data['date-of-birth-day']
+    },
+    {
+      classes: "govuk-input--width-2 govuk-input--error" if (data['errors'] and not (data['date-of-birth-day'] and data['date-of-birth-month'] and data['date-of-birth-year'])) else "govuk-input--width-2" ,
+      name: "month",
+      value: data['date-of-birth-month']
+    },
+    {
+      classes: "govuk-input--width-4 govuk-input--error" if (data['errors'] and not (data['date-of-birth-day'] and data['date-of-birth-month'] and data['date-of-birth-year'])) else "govuk-input--width-4"  ,
+      name: "year",
+      value: data['date-of-birth-year']
+    }
+  ]
+}) }}
 
 
 
