updated index page

--- a/app/views/base/index.html
+++ b/app/views/base/index.html
@@ -14,6 +14,11 @@
     </h1>
 
 
+<h2 class="govuk-heading-m">
+Known bugs
+</h2>
+<p>If someone goes from check your answers to a page and deletes information, the error message should show but does not. </p>
+
     <h2 class="govuk-heading-m">
   Guidance pages
     </h2>
@@ -54,13 +59,13 @@ Apply pages
 </h2>
 
 {% set apply = [
-{title: "Q1", description: "Input, date, back link, cookie banner", link: "apply/1" },
-{title: "Q2", description: "Conditional reveal, complex question, checkboxes, back link", link: "apply/2" },
-{title: "Q3", description: "Textarea, back link", link: "apply/3" },
-{title: "Q4", description: "Radio, back link", link: "apply/4" },
-{title: "Q5", description: "Upload link", link: "apply/5" },
-{title: "Check your answers", description: "Summary list", link: "apply/check-your-answers" },
-{title: "Confirmation", description: "Panel, button", link: "apply/confirmation" }
+{title: "Q1", description: "Input, date, back link, cookie banner, error message", link: "apply/1" },
+{title: "Q2", description: "Conditional reveal, complex question, checkboxes, back link, cookie banner, error message", link: "apply/2" },
+{title: "Q3", description: "Textarea, back link, cookie banner, error message", link: "apply/3" },
+{title: "Q4", description: "Radio, back link, cookie banner, error message", link: "apply/4" },
+{title: "Q5", description: "Upload link, back link, cookie banner, error message", link: "apply/5" },
+{title: "Check your answers", description: "Summary list, cookie banner", link: "apply/check-your-answers" },
+{title: "Confirmation", description: "Panel, button, cookie banner", link: "apply/confirmation" }
 
   ]%}
 
