--- a/app/views/base/apply/3.html
+++ b/app/views/base/apply/3.html
@@ -22,6 +22,7 @@
   name: "moreDetail",
   id: "more-detail",
   maxlength: 200,
+  value: data['moreDetail'],
   label: {
     text: pageTitle,
     classes: "govuk-label--l",
