--- a/app/views/base/apply/check-your-answers.html
+++ b/app/views/base/apply/check-your-answers.html
@@ -65,6 +65,23 @@
     },
     {
       key: {
+        text: "Where you are studying"
+      },
+      value: {
+        text: data['country'] or "Northumbria University"
+      },
+      actions: {
+        items: [
+          {
+            href: "1a",
+            text: "Change",
+            visuallyHiddenText: "university"
+          }
+        ]
+      }
+    },
+    {
+      key: {
         text: "Types of help you need"
       },
       value: {
