show no options

--- a/app/views/base/apply/1a.html
+++ b/app/views/base/apply/1a.html
@@ -28,6 +28,7 @@
   name: "country",
   value: data['country'],
   allowEmpty: false,
+  showNoOptionsFound: true,
   label: {
     classes: "govuk-label--l",
     isPageHeading: true,
