--- a/app/views/base/index.html
+++ b/app/views/base/index.html
@@ -60,13 +60,13 @@ Apply pages
 
 {% set apply = [
 {title: "Q1", description: "Input, date, back link, cookie banner, error message", link: "apply/1" },
-{title: "Q1a", description: "Autocomplete, back link, cookie banner, error message", link: "apply/1a" },
 {title: "Q2", description: "Conditional reveal, complex question, checkboxes, back link, cookie banner, error message", link: "apply/2" },
 {title: "Q3", description: "Textarea, back link, cookie banner, error message", link: "apply/3" },
 {title: "Q4", description: "Radio, back link, cookie banner, error message", link: "apply/4" },
 {title: "Q5", description: "Upload link, back link, cookie banner, error message", link: "apply/5" },
 {title: "Check your answers", description: "Summary list, cookie banner", link: "apply/check-your-answers" },
-{title: "Confirmation", description: "Panel, button, cookie banner", link: "apply/confirmation" }
+{title: "Confirmation", description: "Panel, button, cookie banner", link: "apply/confirmation" },
+{title: "Cookies", description: "Cookie page, success banner", link: "apply/cookies" }
 
   ]%}
 
