fixed router not working

--- a/app/views/base/apply/1.html
+++ b/app/views/base/apply/1.html
@@ -1,5 +1,5 @@
 {% set pageTitle = "Your details" %}
-{% set nextPage = "2" %}
+{% set nextPage = "1-router" %}
 {% extends "/"  + folder +  "/" + subfolder + "/_BASE.html" %}
 
 {% block form %}
