added accessibility fixes
Thanks to pattern checker https://chromewebstore.google.com/detail/pattern-checker/amjjliajblignodfdjalnfkekkeflkph?hl=en-GB - learned some things today

--- a/app/views/base/account/_BASE.html
+++ b/app/views/base/account/_BASE.html
@@ -1,8 +1,11 @@
+{% set tempName =  "Account section" %}
 {% set serviceName = "Study help account" %}
+
 {% extends "layouts/main.html" %}
 
+
 {% block pageTitle %}
-  {{pageTitle}} – {{ serviceName }} – GOV.UK Prototype Kit
+  {% if data['errors'] %}Error: {% endif %}{{pageTitle}} - {{tempName}}  –  {{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block header %}
