--- a/app/views/base/index.html
+++ b/app/views/base/index.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Home" %}
+{% set pageName="Version for testing" %}
 
 {% block content %}
 
@@ -10,7 +10,7 @@
 
 
     <h1 class="govuk-heading-xl">
-    Version for testing
+    {{pageName}}
     </h1>
 
 
