--- a/app/views/base/apply/cookies.html
+++ b/app/views/base/apply/cookies.html
@@ -9,7 +9,6 @@
 {% block form %}
 
 
-{{ pageTitle | headingH1 | safe  }}
 
 
 
@@ -29,13 +28,16 @@
 {% endif %}
 
 
+{{ pageTitle | headingH1 | safe  }}
+
+
       <p>{{serviceName}} puts small files (known as ‘cookies’) on to your computer.</p>
 
       <p>We use cookies to make prototypes work as well as possible.</p>
 
       <p>These cookies aren’t used to identify you personally.</p>
 
-      <p><a href="https://ico.org.uk/for-the-public/online/cookies/">Find out how to manage cookies</a>.</p>
+      <p><a class="govuk-link" href="https://ico.org.uk/for-the-public/online/cookies/">Find out how to manage cookies</a>.</p>
 
       <h2 class="govuk-heading-l">Storing users' answers within prototypes</h2>
 
@@ -149,8 +151,7 @@
           fieldset: {
             legend: {
               text: "Do you want to accept analytics cookies?",
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--,"
+              classes: "govuk-fieldset__legend--m"
             }
           },
           items: [
@@ -170,9 +171,6 @@
 
 
 
-
-
-
 {{ govukButton({
 
 text: "Save cookie settings"
@@ -181,7 +179,7 @@ text: "Save cookie settings"
 
       </form>
 
-<p><a href="/{{folder}}/{{subfolder}}/1">Go back to {{serviceName}}</a></p>
+<p><a class="govuk-link" href="/{{folder}}/{{subfolder}}/1">Go back to {{serviceName}}</a></p>
 
 
 
