--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,12 +12,120 @@
       {{ serviceName }}
     </h1>
 
-<P class="govuk-body"><a class="govuk-link" href="base/index">Base pages</a></p>
 
-    {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
+<p class="govuk-body">Example service for building and testing an accessible service.</p>
+
+{{ govukButton({
+  text: "Go to start page",
+  href: "/base/start",
+  isStartButton: true
+}) }}
+
+<h2 class="govuk-heading-l">
+All screens
+</h2>
+
+<p>The screens are connected in a single journey but can also be navigated to separately from this page.</p>
 
 
-    {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
+        <h3 class="govuk-heading-m">
+      Guidance pages
+        </h3>
+
+    {% set guidance = [
+    {title: "Start page", description: "Guidance, start page, important text", link: "start" },
+    {title: "Guidance", description: "Accordion", link: "accordion" }
+
+      ]%}
+
+    {% macro customCheck(list)%}
+      {% for object in list %}
+           <div class="govuk-summary-list__row">
+             <dt class="govuk-summary-list__key">
+               {{object.title}}
+             </dt>
+             <dd class="govuk-summary-list__value">
+               {{object.description}}
+             </dd>
+          <dd class="govuk-summary-list__actions">
+    <a class="govuk-link" href="/base/{{object.link}}">View <span class="govuk-visually-hidden">{{object.title}}</span></a>
+             </dd>
+           </div>
+    {% endfor %}
+    {% endmacro %}
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+
+    {{ customCheck(guidance) }}
+
+              </dl>
+
+
+
+
+    <h3 class="govuk-heading-m">
+    Apply pages
+    </h3>
+
+    {% set apply = [
+    {title: "Q1", description: "Input, date, back link, cookie banner, error message", link: "apply/1" },
+    {title: "Q1a", description: "Autocomplete, back link, cookie banner, error message", link: "apply/1a" },
+    {title: "Q2", description: "Conditional reveal, complex question, checkboxes, back link, cookie banner, error message", link: "apply/2" },
+    {title: "Q3", description: "Textarea, back link, cookie banner, error message", link: "apply/3" },
+    {title: "Q4", description: "Radio, back link, cookie banner, error message", link: "apply/4" },
+    {title: "Q5", description: "Upload link, back link, cookie banner, error message", link: "apply/5" },
+    {title: "Check your answers", description: "Summary list, cookie banner", link: "apply/check-your-answers" },
+    {title: "Confirmation", description: "Panel, button, cookie banner", link: "apply/confirmation" },
+    {title: "Cookies", description: "Cookie page, success banner", link: "apply/cookies" }
+
+      ]%}
+
+
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+
+    {{ customCheck(apply) }}
+
+          </dl>
+
+
+    <h3 class="govuk-heading-m">
+    Account
+    </h3>
+
+
+    {% set account = [
+    {title: "Account home", description: "Menu with links", link: "account/index" }
+
+      ]%}
+
+
+      <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+
+      {{ customCheck(account) }}
+
+            </dl>
+
+
+    <h2 class="govuk-heading-l">
+      Testing these pages
+    </h2>
+
+<p class="govuk-body">This was made using GOV.UK Frontend, the GOV.UK Design System macros where possible and the GOV.UK Prototype kit for interactive elements. This means that it should only have issues as in the <a class="govuk-link" href="https://design-system.service.gov.uk/accessibility-statement/">GOV.UK Design System accessibility statement</a> (which note two issues with Dragon speech recognition software and some components). </p>
+<p>
+  When testing using accessibility tester <a class="govuk-link" href="https://liptrot.org/pattern-checker/" >Adam Liptrot's Pattern Checker Chrome extension</a>, there are only 3 errors and thse are through known exceptions:</p>
+
+  <ol class="govuk-list govuk-list--number">
+    <li>Timeout warning not found - this has not been included for the purposes of a prototype</li>
+    <li>ARIA link to input missing on character input field - this is from the GOV.UK Design System pattern</li>
+    <li>Page title does not match service name on GOV.UK start page - this is normally on the GOV.UK website and not a transaction</li>
+  </ol>
+
+  <h2 class="govuk-heading-l">
+  Known bugs
+  </h2>
+  <p>If someone goes from check your answers to a page and deletes information, the error message should show but does not. </p>
+
+
 
   </div>
 </div>
